--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   </head>
 
   <body onload="init()">
+    <div class="openCardStyle d-none" id="openCard"></div>
+
     <div class="header">
       <img src="img/logo.png" />
       <input
@@ -35,7 +37,9 @@
 
     <div class="footer">
       <div class="loadMoreContainer">
-        <button class="loadMore" onclick="loadMorePokemon()">Load more</button>
+        <button class="loadMore" onclick="loadMorePokemon()" id="loadMore">
+          Load more
+        </button>
       </div>
     </div>
   </body>
